exports[`Leaf adds color style to text styles 1`] = `
<div
  className="test"
  style={
    Object {
      "color": "red",
      "height": 20,
      "width": 20,
    }
  }>
  <i
    className="icon-type green"
    style={
      Object {
        "color": "red",
        "fontSize": 20,
      }
    } />
</div>
`;

exports[`Leaf renders with props 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "red",
      "height": 20,
      "width": 20,
    }
  }>
  <i
    className="icon-type green"
    style={
      Object {
        "fontSize": 20,
      }
    } />
</div>
`;

exports[`Logo renders with props 1`] = `
<Leaf
  className="test"
  color="green"
  size={20}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
  type="type" />
`;

exports[`OutlinedLeaf renders with props 1`] = `
<Leaf
  className="test"
  color="green"
  size={20}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
  type="type" />
`;

exports[`SolidLeaf renders with props 1`] = `
<Leaf
  className="test"
  color="green"
  size={20}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
  type="type" />
`;

exports[`StripedLeaf renders with props 1`] = `
<Leaf
  className="test"
  color="green"
  size={20}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
  type="type" />
`;
